--- a/index8.html
+++ b/index8.html
@@ -3,164 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="corcelli.css">
   <title>Links do Grupo Corcelli loja 08</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: url('fundoapp1.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
-    .container {
-      margin: 0 auto;
-      padding: 40px 20px;
-      max-width: 500px;
-      background: rgba(0,0,0,0.45);
-      border-radius: 20px;
-    }
-    .logo-fade {
-      position: relative;
-      width: 130px;
-      height: 130px;
-      margin: 0 auto 25px;
-    }
-    .logo-img {
-      position: absolute;
-      left: 0; top: 0;
-      width: 130px; height: 130px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #fff;
-      box-shadow: 0 2px 6px #0002;
-      background: #fff;
-      transition: opacity 0.7s;
-      opacity: 0;
-      z-index: 1;
-    }
-    .logo-img.show { opacity: 1; z-index: 2; }
-
-    h1, .redes-title {
-      color: #fff;
-      text-shadow: 0 1px 4px #0009;
-    }
-    .redes-title {
-      font-size: 18px;
-      font-weight: bold;
-      margin: 32px 0 22px;
-    }
-    .icon-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 30px 12px;
-      justify-items: center;
-      margin-bottom: 16px;
-    }
-    .icon-link {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-decoration: none;
-      color: #fff;
-      font-weight: 500;
-      cursor: pointer;
-    }
-    .icon-link:active,
-    .icon-link:focus,
-    .icon-link:hover {
-      opacity: 0.9;
-      transform: translateY(-2px) scale(1.03);
-    }
-    .icon-img {
-      width: 70px;
-      height: 70px;
-      border-radius: 30%;
-      object-fit: contain;
-      background: #fff;
-      box-shadow: 0 2px 6px #0001;
-      margin-bottom: 4px;
-      padding: 4px;
-      border: 2px solid #eee;
-    }
-    .icon-label {
-      font-size: 12px;
-      font-weight: 500;
-      margin-top: 1px;
-      color: #fff;
-      text-shadow: 0 1px 4px #0009;
-    }
-    footer {
-      margin-top: 25px;
-      font-size: 12px;
-      color: #fff;
-      text-shadow: 0 1px 4px #0009;
-    }
-    .carousel-wrapper {
-      width: 100vw;
-      max-width: 530px;
-      overflow: hidden;
-      margin: 10px auto 0;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px #0005;
-      background: #fff;
-      position: relative;
-    }
-    .carousel {
-      display: flex;
-      transition: transform 0.4s cubic-bezier(.4,1,.3,1);
-      will-change: transform;
-    }
-    .carousel img {
-      width: 100%;
-      max-width: none;
-      height: auto;
-      aspect-ratio: 1 / 1;
-      object-fit: cover;
-      flex-shrink: 0;
-      user-select: none;
-      pointer-events: none;
-      display: block;
-      background: #eee;
-    }
-    .carousel-dots {
-      position: absolute;
-      bottom: 8px;
-      left: 0; right: 0;
-      display: flex;
-      justify-content: center;
-      gap: 8px;
-    }
-    .carousel-dot {
-      width: 10px; height: 10px;
-      border-radius: 50%;
-      background: #fff;
-      border: 1.5px solid #888;
-      opacity: 0.7;
-      transition: background 0.3s, opacity 0.3s;
-      cursor: pointer;
-    }
-    .carousel-dot.active {
-      background: #007aff;
-      opacity: 1;
-      border-color: #007aff;
-    }
-    @media (max-width: 500px) {
-      .container, .carousel-wrapper {
-        max-width: 100vw;
-        border-radius: 0 !important;
-        box-shadow: none !important;
-        background: rgba(0,0,0,0.5);
-      }
-      .container { max-width: 98vw; padding: 10vw 1vw; }
-      .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
-      .icon-img { width: 50px; height: 50px; }
-      .logo-fade, .logo-img { width: 90px; height: 90px;}
-    }
-  </style>
-</head>
+  </head>
 <body>
   <main class="container">
     <div class="logo-fade" id="logo-fade">
