Update logo image and carousel image extensions

--- a/index3.html
+++ b/index3.html
@@ -164,7 +164,7 @@
 <body>
   <main class="container">
     <div class="logo-fade">
-      <img class="logo-img" src="logo3/logo1.png" alt="Logo Corcelli">
+      <img class="logo-img" src="logo3/logo2.png" alt="Logo Corcelli">
     </div>
     <h1>Concept Store</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
@@ -218,8 +218,8 @@
   <script>
     // CAROUSEL (permanece igual)
     const images = [
-      "carrossel3/img1.PNG","carrossel3/img2.PNG","carrossel3/img3.PNG","carrossel3/img4.PNG","carrossel3/img5.PNG",
-      "carrossel3/img6.PNG","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG","carrossel3/img11.PNG"
+      "carrossel3/img1.PNG","carrossel3/img2.png","carrossel3/img3.png","carrossel3/img4.png","carrossel3/img5.png",
+      "carrossel3/img6.png","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG","carrossel3/img11.PNG"
     ];
     const carousel = document.getElementById('carousel');
     const dotsContainer = document.getElementById('carousel-dots');
