Update title and headings for Ophicina Itatiba

--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links do Grupo Corcelli loja 03</title>
+  <title>Links do Ophicina Itatiba</title>
   <style>
     body {
       margin: 0;
@@ -166,7 +166,7 @@
     <div class="logo-fade">
       <img class="logo-img" src="logo3/logo2.png" alt="Logo Corcelli">
     </div>
-    <h1>Concept Store</h1>
+    <h1>Ophicina Itatiba</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="icon-grid">
       <!-- ... (links como já estavam) ... -->
@@ -208,7 +208,7 @@
       </a>
     </div>
     <footer>
-      &copy; 2025 Concept Store by Corcelli. Todos os direitos reservados.
+      &copy; 2025 Ophicina Itatiba by Corcelli. Todos os direitos reservados.
     </footer>
   </main>
   <div class="carousel-wrapper">
