--- a/index3.html
+++ b/index3.html
@@ -31,10 +31,10 @@
       align-items: center;
     }
     .logo-img {
-      width: 130px;
-      height: 130px;
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
-      object-fit: cover;
+      object-fit: contain;
       border: 4px solid #fff;
       box-shadow: 0 2px 6px #0002;
       background: #fff;
