--- a/index3.html
+++ b/index3.html
@@ -23,8 +23,8 @@
       border-radius: 20px;
     }
     .logo-fade {
-      width: 130px;
-      height: 130px;
+      width: 180px;
+      height: 180px;
       margin: 0 auto 25px;
       display: flex;
       justify-content: center;
@@ -38,7 +38,7 @@
       border: 4px solid #fff;
       box-shadow: 0 2px 6px #0002;
       background: #fff;
-      animation: balanco 1.2s ease-in-out infinit;
+      animation: balanco 1.2s ease-in-out infinite;
     }
     @keyframes balanco {
       0%   { transform: translateY(0px) rotate(0deg); }
