--- a/index3.html
+++ b/index3.html
@@ -29,15 +29,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-    }
+      }
     .logo-img {
       width: 160px;
-      height: 160px;
-      border-radius: 50%;
+      height: auto;
       object-fit: contain;
-      border: 4px solid #fff;
-      box-shadow: 0 2px 6px #0002;
-      background: #fff;
+      background: transparent;
+      border: none;
+      box-shadow: none;
       animation: balanco 1.2s ease-in-out infinite;
     }
     @keyframes balanco {
@@ -191,23 +190,23 @@
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
-      <a class="icon-link" href="https://facebook.com/conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Concept Store">
+      <a class="icon-link" href="https://facebook.com/conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Ophicina Itatiba">
         <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
-      <a class="icon-link" href="https://instagram.com/conceptstore.Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Concept Store">
+      <a class="icon-link" href="https://instagram.com/@ophicina_itatiba" target="_blank" rel="noopener noreferrer" aria-label="Instagram Ophicina Itatiba">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
-      <a class="icon-link" href="https://www.tiktok.com/@conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Concept Store">
+      <a class="icon-link" href="https://www.tiktok.com/@conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Ophicina Itatiba">
         <img class="icon-img" src="tiktok.svg" alt="TikTok">
         <span class="icon-label">TikTok</span>
       </a>
-      <a class="icon-link" href="https://www.ophicina.com.br/" target="_blank" rel="noopener noreferrer" aria-label="Site Concept Store">
+      <a class="icon-link" href="https://www.ophicina.com.br/" target="_blank" rel="noopener noreferrer" aria-label="Site Ophicina Itatiba">
         <img class="icon-img" src="logo3/logo2.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
-      <a class="icon-link" href="mailto:caixa03.1@gmail.com" aria-label="E-mail Concept Store">
+      <a class="icon-link" href="mailto:caixa03.1@gmail.com" aria-label="E-mail Ophicina Itatiba">
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </a>
