Add logo image and update styles in index3.html

--- a/index3.html
+++ b/index3.html
@@ -47,10 +47,15 @@
       100% { transform: translateY(0px) rotate(0deg); }
     }
 
-    h1, .redes-title {
-      color: #fff;
-      text-shadow: 0 1px 4px #0009;
+    .logo-nome {
+      width: 220px;
+      height: auto;
+      margin: 0 auto 20px;
+      display: block;
+      object-fit: contain;
+      background: transparent;
     }
+
     .redes-title {
       font-size: 18px;
       font-weight: bold;
@@ -170,7 +175,8 @@
     <div class="logo-fade">
       <img class="logo-img" src="logo3/logo2.png" alt="Logo Corcelli">
     </div>
-    <h1>Ophicina Itatiba</h1>
+    <img src="logo3/logo1.png" alt="Ophicina Itatiba" class="logo-nome">
+
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="icon-grid">
       <!-- ... (links como já estavam) ... -->
