--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,8 @@
       margin: 0 auto;
       padding: 30px 20px;
       max-width: 500px;
-      background: rgba(0,0,0,0.25);
+      background: rgba(0,0,0,0.15);
+      backdrop-filter: blur(4px);
       border-radius: 20px;
     }
     .logo-fade {
