--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="data:image/png;base64,iVBORw0KGgo=" type="image/png">
   <title>Links do Ophicina Itatiba</title>
   <style>
     body {
@@ -38,7 +39,6 @@
       object-fit: contain;
       background: transparent;
       border: none;
-      box-shadow: none;
       animation: balanco 1.2s ease-in-out infinite;
     }
     @keyframes balanco {
