--- a/index3.html
+++ b/index3.html
@@ -194,7 +194,7 @@
         <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="icon-label">Endereço</span>
       </a>
-      <a class="icon-link" href="https://api.whatsapp.com/send?phone=5511915417060&text=Ol%C3%A1,%20Grupo%20Corcelli!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Corcelli">
+      <a class="icon-link" href="https://api.whatsapp.com/send?phone=5511915417060&text=Ol%C3%A1,%20Ophicina%20Itatiba!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Corcelli">
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
