Add Safari-specific user-select property

--- a/index3.html
+++ b/index3.html
@@ -132,6 +132,7 @@
       object-fit: cover;
       flex-shrink: 0;
       user-select: none;
+      -webkit-user-select: none; /* Safari 3+ */
       pointer-events: none;
       display: block;
       background: #eee;
