Update Instagram link to correct URL

--- a/index3.html
+++ b/index3.html
@@ -203,7 +203,7 @@
         <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
-      <a class="icon-link" href="https://instagram.com/@ophicina_itatiba" target="_blank" rel="noopener noreferrer" aria-label="Instagram Ophicina Itatiba">
+      <a class="icon-link" href="https://www.instagram.com/ophicina_itatiba/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Ophicina Itatiba">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
