Update Facebook link to new URL

--- a/index3.html
+++ b/index3.html
@@ -199,7 +199,7 @@
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
-      <a class="icon-link" href="https://facebook.com/conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Ophicina Itatiba">
+      <a class="icon-link" href="https://www.facebook.com/Ophicina?locale=pt_BR" target="_blank" rel="noopener noreferrer" aria-label="Facebook Ophicina Itatiba">
         <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
