--- a/index3.html
+++ b/index3.html
@@ -207,7 +207,7 @@
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
-      <a class="icon-link" href="https://www.tiktok.com/@conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Ophicina Itatiba">
+      <a class="icon-link" href="https://www.tiktok.com/@ophicina" target="_blank" rel="noopener noreferrer" aria-label="TikTok Ophicina Itatiba">
         <img class="icon-img" src="tiktok.svg" alt="TikTok">
         <span class="icon-label">TikTok</span>
       </a>
