Remove box-shadow from element styling

--- a/index3.html
+++ b/index3.html
@@ -39,6 +39,7 @@
       object-fit: contain;
       background: transparent;
       border: none;
+      box-shadow: none;
       animation: balanco 1.2s ease-in-out infinite;
     }
     @keyframes balanco {
