--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,7 @@
       max-width: 500px;
       background: rgba(0,0,0,0.15);
       -webkit-backdrop-filter: blur(4px); /* Safari 9+ */
-      backdrop-filter: blur(4px);
+      /*backdrop-filter: blur(4px);*/
       border-radius: 20px;
     }
     .logo-fade {
