--- a/index3.html
+++ b/index3.html
@@ -21,8 +21,8 @@
       padding: 30px 20px;
       max-width: 500px;
       background: rgba(0,0,0,0.15);
-      -webkit-backdrop-filter: blur(4px); /* Safari 9+ */
-      /*backdrop-filter: blur(4px);*/
+      -webkit-backdrop-filter: blur(4px); 
+      backdrop-filter: blur(4px);
       border-radius: 20px;
     }
     .logo-fade {
