--- a/index3.html
+++ b/index3.html
@@ -197,11 +197,11 @@
       </a>
       <a class="icon-link" href="https://api.whatsapp.com/send?phone=5511982594379&text=Ol%C3%A1,%20Ophicina%20Itatiba!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Corcelli">
         <img class="icon-img" src="whatsapp.svg" alt="Whats venda">
-        <span class="icon-label">WhatsApp</span>
+        <span class="icon-label">Whats venda</span>
       </a>
       <a class="icon-link" href="https://api.whatsapp.com/send?phone=551145385420&text=Ol%C3%A1,%20Ophicina%20Itatiba!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Corcelli">
         <img class="icon-img" src="whatsapp.svg" alt="Whats caixa">
-        <span class="icon-label">WhatsApp</span>
+        <span class="icon-label">Whats caixa</span>
       </a>
       <a class="icon-link" href="https://www.instagram.com/ophicina_itatiba/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Ophicina Itatiba">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
