--- a/index3.html
+++ b/index3.html
@@ -232,7 +232,7 @@
     // CAROUSEL (permanece igual)
     const images = [
       "carrossel3/img1.PNG","carrossel3/img2.png","carrossel3/img3.png","carrossel3/img4.png","carrossel3/img5.png",
-      "carrossel3/img6.png","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG","carrossel3/img11.PNG"
+      "carrossel3/img6.png","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG","carrossel3/img11.png"
     ];
     const carousel = document.getElementById('carousel');
     const dotsContainer = document.getElementById('carousel-dots');
